-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 10
-
Component/s: hotspot
-
b21
-
x86
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8186033 | 9 | Harold Seigel | P2 | Closed | Won't Fix |
This test failure was spotted in the 2017-07-21 JDK10-hs nightly:
runtime/Thread/TestThreadDumpMonitorContention.java
Test failed due to a SIGSEGV on Linux X64 32-bit Server VM.
Here is a snippet of the stack trace:
V [libjvm.so+0xb8cb10] G1SATBCardTableModRefBS::write_ref_field_pre_work(oop*, oop)+0x20;; G1SATBCardTableModRefBS::write_ref_field_pre_work(oop*, oop)+0x20
V [libjvm.so+0x7e1765] oopDesc::obj_field_put(int, oop)+0x335;; oopDesc::obj_field_put(int, oop)+0x335
V [libjvm.so+0xcd91c8] java_lang_Class::set_module(oop, oop)+0x48;; java_lang_Class::set_module(oop, oop)+0x48
V [libjvm.so+0xcd9297] java_lang_Class::fixup_module_field(Klass*, Handle)+0x57;; java_lang_Class::fixup_module_field(Klass*, Handle)+0x57
V [libjvm.so+0x10e28f5] ModuleEntryTable::patch_javabase_entries(Handle)+0x385;; ModuleEntryTable::patch_javabase_entries(Handle)+0x385
V [libjvm.so+0x10ecc2f] Modules::define_module(_jobject*, unsigned char, _jstring*, _jstring*, char const* const*, int, Thread*)+0x31ff;; Modules::define_module(_jobject*, unsigned char, _jstring*, _jstring*, char const* const*, int, Thread*)+0x31ff
V [libjvm.so+0xdf31f7] JVM_DefineModule+0xf7;; JVM_DefineModule+0xf7
runtime/Thread/TestThreadDumpMonitorContention.java
Test failed due to a SIGSEGV on Linux X64 32-bit Server VM.
Here is a snippet of the stack trace:
V [libjvm.so+0xb8cb10] G1SATBCardTableModRefBS::write_ref_field_pre_work(oop*, oop)+0x20;; G1SATBCardTableModRefBS::write_ref_field_pre_work(oop*, oop)+0x20
V [libjvm.so+0x7e1765] oopDesc::obj_field_put(int, oop)+0x335;; oopDesc::obj_field_put(int, oop)+0x335
V [libjvm.so+0xcd91c8] java_lang_Class::set_module(oop, oop)+0x48;; java_lang_Class::set_module(oop, oop)+0x48
V [libjvm.so+0xcd9297] java_lang_Class::fixup_module_field(Klass*, Handle)+0x57;; java_lang_Class::fixup_module_field(Klass*, Handle)+0x57
V [libjvm.so+0x10e28f5] ModuleEntryTable::patch_javabase_entries(Handle)+0x385;; ModuleEntryTable::patch_javabase_entries(Handle)+0x385
V [libjvm.so+0x10ecc2f] Modules::define_module(_jobject*, unsigned char, _jstring*, _jstring*, char const* const*, int, Thread*)+0x31ff;; Modules::define_module(_jobject*, unsigned char, _jstring*, _jstring*, char const* const*, int, Thread*)+0x31ff
V [libjvm.so+0xdf31f7] JVM_DefineModule+0xf7;; JVM_DefineModule+0xf7
- backported by
-
JDK-8186033 TestThreadDumpMonitorContention.java crashed due to SIGSEGV in G1SATBCardTableModRefBS::write_ref_field_pre_work
-
- Closed
-
- duplicates
-
JDK-8183309 Crash in oopDesc::obj_field_put
-
- Closed
-