8185103: TestThreadDumpMonitorContention.java crashed due to SIGSEGV in G1SATBCardTableModRefBS::write_ref_field_pre_work

Ensure that a Klass's mirror is set before putting the Klass on the fixup_module_field_list

Reviewed-by: coleenp, dholmes, gtriantafill